@@ -1,3 +1,10 @@
+2011-03-14  Sebastien Binet  <sebastien.binet@cern.ch>
+
+	* tagging PyUtils-00-10-58
+	* make sure PoolFile.checkFile gets AtlasCore as an environment
+	  as some reflex dicts load StoreGateSvc as a side effect
+	* M python/PoolFile.py
+
 2011-03-11  Sebastien Binet  <sebastien.binet@cern.ch>
 
 	* tagging PyUtils-00-10-57
